<resources>
    <string name="app_name">Money Tracker</string>
    <string name="Email">Enter Email</string>
    <string name="enter_password">Password</string>
    <string name="sigin">"login "</string>
    <string name="or">OR</string>
    <string name="createAccount">create account</string>
    <string name="username">Username</string>
    <string name="create">create</string>
    <string name="month">month</string>
    <string name="spending">Spending</string>
    <string name="graph">Graph</string>
    <string name="account">Accounts</string>
    <string name="categories">Categories</string>
    <string name="Income" />
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="add_expense">+ Expense</string>
    <string name="add_income">+ Income</string>
    <string name="dash">-------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="balance">Balance</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="all">All Categories</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="Daily">Daily</string>
    <string name="Yearly">Yearly</string>
    <string name="weekDay">WeekDay</string>
</resources>