<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/email"
        android:background="@drawable/login"
        android:hint="@string/Email"
        android:elevation="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:background="@drawable/login"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/sigin"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/create_account_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:text="@string/createAccount"
        android:textStyle="bold" />


</LinearLayout>


</LinearLayout>

