<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_account_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/create_account_username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login"
            android:elevation="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:textColor="@color/black" />


        <AutoCompleteTextView
            android:id="@+id/create_account_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login"
            android:elevation="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/create_account_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login"
            android:elevation="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <!--           <Button-->
        <!--            android:id="@+id/create_intent"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:text="intent"-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"/>-->
    </LinearLayout>


</LinearLayout>