<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grey_texture"
    tools:context=".SpendingActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
             android:elevation="5dp"
            android:title="Spending                                     "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:titleTextColor="@color/black"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content">-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:text="Spending"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="23dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/month"-->
<!--        app:layout_constraintHorizontal_bias="0.125"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
          android:layout_marginEnd="1dp"
        android:background="@android:color/transparent"
        android:text="All"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

            <ImageButton
        android:id="@+id/signout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Sign out"
        android:textColor="@color/black"
        android:textSize="10dp"
                android:src="@drawable/ic_baseline_power_settings_new_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
        </Toolbar>

        <TableLayout
            android:id="@+id/tableLayout"
             android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_outline_monetization_on_24"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/transactionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_outline_event_note_24"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/graphButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_outline_insert_chart_24"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/categoriesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_outline_content_paste_24"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:id="@+id/textView_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/spending"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/spending"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Transaction"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/graph"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/graph"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/categories"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout">

            <TextView
                android:id="@+id/expenseTransactionRow"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/totalIncomeAmount"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:text="$0.00"
                android:textAlignment="textStart"
                android:textColor="@color/dark_green"
                android:textSize="23sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/income_recyclerView"
            android:layout_width="match_parent"
      android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/income_recyclerView">

            <TextView
                android:id="@+id/expense"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/expense_amount"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:text="$0.00"
                android:textAlignment="textStart"
                android:textColor="@color/dark_red"
                android:textSize="23sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expense_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:maxLines="1"
            android:text="@string/dash"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_recyclerView" />


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height = "wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dash">

            <TextView
                android:id="@+id/balance"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/balance"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/totalBalance"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:text="$0.00"
                android:textAlignment="textStart"
                android:textColor="#00E5FF"
                android:textSize="23sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/add_expense"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:backgroundTint="#E8E0E0"
        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_income"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_income"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:backgroundTint="#E8E0E0"

        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/add_income"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>